Bug 379400 - Can't save GSM connection type
Summary: Can't save GSM connection type
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-01 10:41 UTC by S1awek
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The window (40.16 KB, image/png)
2017-05-01 10:41 UTC, S1awek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description S1awek 2017-05-01 10:41:35 UTC
Created attachment 105293 [details]
The window

Whenever I try to set my GSM connection type to something else than "any" it will go back to default (which is "any") and don't remember my choice. 
It is important for me because my mobile broadband is free as long as I'm in the 4g LTE network - anything else I will by charged for. 
Was trying to edit connection config file in system-connections folder, but I could not find any detailed documentation about how to set 4G connection there and the file every time is overwritten by default setting anyway.
Comment 1 Jan Grulich 2017-05-02 12:08:33 UTC
Git commit f1e39c5458e6fde4e586a64f13ad9f354e219339 by Jan Grulich.
Committed on 02/05/2017 at 12:08.
Pushed by grulich into branch 'master'.

Remove option to set network type in gsm configuration

This has been deprecated since NM 0.9.10.

M  +0    -11   libs/editor/settings/gsmwidget.cpp
M  +3    -29   libs/editor/settings/ui/gsm.ui

https://commits.kde.org/plasma-nm/f1e39c5458e6fde4e586a64f13ad9f354e219339