Remove option to set network type in gsm configuration

This has been deprecated since NM 0.9.10.

BUG:379400